--- a/index.html
+++ b/index.html
@@ -13,16 +13,12 @@
         <input type="checkbox" id="menuToggle">
         <label for="menuToggle" class="nav-menu-icon"></label>
         <div class="nav-menu sticky">
-            <div class="planet">
 
-            </div>
-            <!-- <ul>
-                <li><a href="#">HOME</a></li>
-                <li><a href="#">ABOUT</a></li>
-                <li><a href="#">TEAM</a></li>
-                <li><a href="#">CONTACT</a></li>
-                <li><a href="#">FEATURES</a></li>
-            </ul> -->
+           <p>Something</p> 
+            <!-- <div class="planet">
+
+            </div> -->
+            
 
             
         </div>
