--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="planet.css">
 </head>
 <body>
-
+    <div class="wrapper">
         <input type="checkbox" id="menuToggle">
         <label for="menuToggle" class="nav-menu-icon"></label>
         <div class="nav-menu sticky">
@@ -23,6 +23,7 @@
             
         </div>
     
+        </div>
 
     <!-- <div class="circle">
 
