--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
             
            
-           <p> you <br> have <br> found </p> 
+           <p class="hidden"> An aspiring Front-End Developer </p> 
            <!-- <hr> -->
             <!-- <div class="planet">
  
