--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
             <p class="hidden"> An aspiring <br> Junior <br> Front-End Developer </p>
             <hr>
-            <p class="name">Hubert Wiśniewski <br>
+            <p class="name">Hubert Wisniewski <br>
                 <a href="mailto:
             hubertwisniewski.front@gmail.com">
                     hubertwisniewski.front@gmail.com</a>
@@ -30,7 +30,7 @@
         </div>
 
         <div class="nav-menu">
-            <p class="visible">you <br> have <br> found</p>
+            <p class="visible">you <br> have  found</p>
         </div>
 
     </div>
