--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 
 
-            <p class="hidden"> An aspiring <br> Junior <br> Front-End Developer </p>
+            <p class="hidden"> An aspiring <br> Junior <br> FrontEnd Developer </p>
             <hr>
             <p class="name">Hubert Wisniewski <br>
                 <a href="mailto:
